--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-
-# Created by https://www.gitignore.io/api/node,angular
-# Edit at https://www.gitignore.io/?templates=node,angular
+package-lock.json
 
 ### Angular ###
 ## Angular ##
